# arclang

./: .gitignore  .gitlab-ci.yml  ACC_COMPLETE_ARCHITECTURE_DEMO.md  AI_SETUP_GUIDE.md  ALL_DIAGRAMS_ELK_REPORT.md  ARCLANG_ISSUES_AND_IMPROVEMENTS.md  ARCLANG_V2_IMPLEMENTATION_ROADMAP.md  ARCVIZ_ENGINE.md  ARCVIZ_FIXES_COMPLETE.md  ARCVIZ_WEB_APP_PLAN.md  BIDIRECTIONAL_CONVERSION.md  CAPELLAMBSE_LEARNINGS_IMPLEMENTATION_PLAN.md  CAPELLA_INTEGRATION.md  CHAT_ACTIONS_NATIVE_IMPLEMENTATION.md  COMPLETE_VISUALIZATION_GUIDE.md  CONTRIBUTING.md  CURRENT_STATUS.md  Cargo.toml  DEPRECATED_GENERATORS.md  DIAGRAM_RENDERING_SOLUTION.md  DOCUMENTATION_COMPLETE.md  EDGE_FILTERING_FIX.md  ELK_ACTIVATION_GUIDE.md  ELK_ADVANCED_IMPLEMENTATION_SUMMARY.md  ELK_COMPLETE_GUIDE.md  ELK_EXAMPLES_ANALYSIS.md  ELK_INTEGRATION_COMPLETE.md  ELK_SPACING_FIX.md  EXPLORER.md  FINAL_DIAGRAM_REPORT.md  FINAL_SUMMARY.txt  FLEXIBLE_SYNTAX_SUMMARY.md  FOCUSED_IMPLEMENTATION_PLAN.md  GITHUB_SETUP_INSTRUCTIONS.md  HIGH_PRIORITY_IMPLEMENTATION_COMPLETE.md  HYBRID_ENGINE_FINAL_REPORT.md  Jenkinsfile  LAYER_SPECIFIC_VIEWS_COMPLETE.md  LAYOUT_ERROR_FIXED.md  LICENSE  (+68 more)
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
arcviz-web/: .env.example  .gitignore  CHAT_INTEGRATION_COMPLETE.md  COMPLETE_FEATURE_VALIDATION_REPORT.md  EDITOR_VISUALIZER_GUIDE.md  ENHANCED_INTEGRATION_UPDATE.md  FEATURE_INTEGRATION_COMPLETE.md  FINAL_STATUS.md  INTEGRATION_COMPLETE.md  INTEGRATION_SUMMARY_EXECUTIVE.md  INTEGRATION_TEST_PLAN.md  MBSE_SELENIUM_TEST_SUMMARY.md  Makefile  QUICK_REFERENCE_INTEGRATED_FEATURES.md  README.md  REORGANIZATION_SUMMARY.md  RUN_TESTS.md  SELENIUM_TEST_GUIDE.md  SELENIUM_TEST_SUMMARY.md  SETUP_COMPLETE.md  STATUS_REPORT.md  TEST_CHAT_SYSTEM.md  docker-compose.yml
arcviz-web/tests/: FINAL_TEST_SUMMARY.md  README.md  TEST_RESULTS.md  run-all-tests.js  sample-test-model.arc  test-all-7-dimensions.js  test-all-examples.js  test-api-diagrams.js  test-api-direct.js  test-compilation.js  test-e2e-workflow.js  test-editor-selenium.js  test-mcp-integration.js  test-suite.js  test-visualizer-badges.js  test-visualizer-selenium.js  test-visualizer-simple.js
collaboration/: change_tracking.rs  conflict_resolution.rs  git_integration.rs  mod.rs  review.rs  semantic_merge.rs
docs/: API.md  BEST_PRACTICES.md  CAPELLA_METAMODEL.md  CLI_REFERENCE.md  COLLABORATION_GUIDE.md  COMPILER_ARCHITECTURE.md  CONSTRAINT_INTELLIGENCE.md  CONVERT_TO_PNG.md  DIAGRAM_SHOWCASE.md  DIAGRAM_TYPES.md  ELK_INTEGRATION.md  INDEX.md  LANGUAGE_REFERENCE.md  LANGUAGE_SPECIFICATION.md  METAMODEL_IMPLEMENTATION_SUMMARY.md  OPERATIONAL_DIAGRAM_FEATURES.md  PLM_INTEGRATION.md  PLUGIN_DEVELOPMENT.md  QUICKSTART.md  README.md  REQUIREMENTS_MANAGEMENT.md  SAFETY_CERTIFICATION.md  SAFETY_STANDARDS.md  TRACEABILITY.md  TUTORIALS.md  VERSIONING.md  api_reference.md  data_platform_analysis.md  getting_started.md  language_spec.md
docs/history/: ACTIONS_REQUISES.md  ARCHIVAL_SUMMARY.md  ARCLANG_INSTALL_GUIDE.md  ARCLANG_ISSUES_PART2.md  ARCVIZ_AUTOMOTIVE_EXAMPLE.md  (+60 more)
examples/: MIGRATION_NEEDED.md  README.md  complete_emergency_braking_mbse.arc  complete_emergency_braking_mbse.json  complete_emergency_braking_simple.arc  complete_emergency_braking_simple.json  data_platform_migration_backup.arc  data_platform_migration_explorer.html  data_platform_migration_explorer.json  databricks_migration_demo.arc  databricks_migration_demo.json  databricks_migration_simple.arc  databricks_migration_simple.json  databricks_migration_working.arc  databricks_migration_working.json  elk_advanced_demo.arc  elk_advanced_demo.json  emergency_braking_logical.arc  emergency_braking_logical.json  emergency_braking_semantic.arc  emergency_braking_system.arc  emergency_braking_system.json  emergency_braking_v2_complete.arc  test_integrated_pipeline.rs
integrations/: plm_integration.rs  requirements_management.rs
mbse_diagrams/: 00_INDEX.md
mcp-server/: .gitignore  ARCHITECTURE.md  ARCLANG_SYNTAX_RULES.md  BATCH_EXECUTION_GUIDE.md  QUICKSTART.md  README.md  adaptive_cruise_control.arc  pyproject.toml  test_install.py
mcp-server/examples/: adaptive_cruise_control.arc  adaptive_cruise_control_1.arc  example_session.md
mcp-server/src/arclang_mcp/: __init__.py  mbse_expert.py  server.py
mcp-server/src/arclang_mcp/ai/: __init__.py  generator.py
mcp-server/src/arclang_mcp/compiler/: __init__.py  wrapper.py
mcp-server/src/arclang_mcp/resources/: syntax_guide.py
mcp-server/src/arclang_mcp/tools/: __init__.py  core.py  generation.py  integration.py  safety.py
mcp-server/src/arclang_mcp/utils/: __init__.py  config.py
plugins/: api.rs  loader.rs  mod.rs  registry.rs
safety/: do178c.rs  fmea.rs  fta.rs  hazard_analysis.rs  iec61508.rs  iso26262.rs  mod.rs  safety_case.rs
site/: Dockerfile  fly.toml  nginx.conf  robots.txt
spec/: COMPILER_ARCHITECTURE.md  GRAMMAR.ebnf  LANGUAGE_SPEC.md
src/: collaboration.rs  lib.rs  main.rs  parser.rs  plm.rs  plugins.rs  requirements.rs  safety.rs  semantic.rs
terraform/: COMPLETE_AWS_INFRASTRUCTURE.md  README.md  databricks.tf
test_results/: acc_complete_architecture_mermaid.mmd  acc_complete_architecture_plant-uml.puml  acc_from_capella_mermaid.mmd  acc_from_capella_plant-uml.puml  acc_minimal_mermaid.mmd  acc_minimal_plant-uml.puml  adaptive_cruise_control_mermaid.mmd  adaptive_cruise_control_plant-uml.puml  data_platform_migration_mermaid.mmd  data_platform_migration_plant-uml.puml  flight_control_system_mermaid.mmd  flight_control_system_plant-uml.puml  mission_computer_mermaid.mmd  mission_computer_plant-uml.puml  pluxee_analytics_mermaid.mmd  pluxee_analytics_plant-uml.puml  remote_start_architecture_mermaid.mmd  remote_start_architecture_plant-uml.puml  test_report.txt
tests/: api_compile.rs  examples_compile.rs  integration_tests.rs  lexer_tests.rs  parser_tests.rs  semantic_tests.rs  test_aesthetic_intelligence.rs  test_all_examples.py  test_full_acc_model.rs
tools/: build_site.sh  generate_svg.py  test_7d_intelligence.sh  test_rendering_improvements.sh
wasm/: Cargo.toml
wasm/src/: lib.rs
(+394 files in other folders)
