[package]
name = "arclang"
version = "1.0.0"
edition = "2021"
authors = ["ArcLang Contributors"]
description = "Industrial-grade Arcadia-as-Code compiler"
license = "MIT"
repository = "https://github.com/arclang/arclang"
keywords = ["arcadia", "mbse", "systems-engineering", "compiler", "capella"]
categories = ["development-tools", "compilers"]

[[bin]]
name = "arclang"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive", "cargo"] }
colored = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Hashing and crypto
sha2 = "0.10"

# HTTP clients
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Graph algorithms
petgraph = "0.6"

# Regex
regex = "1.10"

# XML parsing
quick-xml = "0.31"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Threading
rayon = "1.8"

# Configuration
config = "0.13"

# Terminal UI
indicatif = "0.17"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
mockall = "0.12"
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
