[package]
name = "arclang"
version = "3.0.0"
edition = "2021"
authors = ["ArcLang Contributors"]
description = "Industrial-grade Arcadia-as-Code compiler with Phase 1 & 2 Rendering Pipeline"
license = "MIT"
repository = "https://github.com/arclang/arclang"
keywords = ["arcadia", "mbse", "systems-engineering", "compiler", "capella"]
categories = ["development-tools", "compilers"]

[features]
# The compiler core is dependency-light and compiles to wasm32; everything
# that needs an OS (CLI, LSP, web server) lives behind `native` (default).
default = ["native"]
native = [
    "dep:clap", "dep:colored", "dep:opener",
    "dep:axum", "dep:tower", "dep:tower-http",
    "dep:tokio", "dep:async-trait", "dep:tower-lsp",
    "dep:tracing", "dep:tracing-subscriber",
    "dep:reqwest",
    "dep:toml", "dep:bincode",
    "dep:rayon", "dep:rand", "dep:config", "dep:indicatif",
]

[[bin]]
name = "arclang"
path = "src/main.rs"
required-features = ["native"]

[dependencies]
# ---- Compiler core (wasm-compatible) ----
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
sha2 = "0.10"
petgraph = "0.6"
regex = "1.10"
quick-xml = "0.41"
chrono = { version = "0.4", features = ["serde"] }
# v5 only: deterministic identity must not depend on an entropy source
uuid = { version = "1.6", features = ["v5", "serde"] }

# ---- Native only (CLI / LSP / web server) ----
clap = { version = "4.4", features = ["derive", "cargo"], optional = true }
colored = { version = "2.0", optional = true }
opener = { version = "0.7", optional = true }
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }
toml = { version = "0.8", optional = true }
bincode = { version = "1.3", optional = true }
tokio = { version = "1.35", features = ["full"], optional = true }
async-trait = { version = "0.1", optional = true }
tower-lsp = { version = "0.20", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
reqwest = { version = "0.11", features = ["json", "blocking"], optional = true }
rayon = { version = "1.8", optional = true }
rand = { version = "0.8", optional = true }
config = { version = "0.13", optional = true }
indicatif = { version = "0.17", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
mockall = "0.12"
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
