[project]
name = "arclang-mcp"
version = "0.1.0"
description = "MCP Server for ArcLang - AI-powered MBSE platform"
authors = [
    {name = "Malek Baroudi", email = "malek@arclang.dev"},
    {name = "Bilel Laasami", email = "bilel@arclang.dev"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["mcp", "mbse", "systems-engineering", "arcadia", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "mcp>=0.9.0",
    "anthropic>=0.18.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/Mbaroudi/arclang"
Documentation = "https://github.com/Mbaroudi/arclang/tree/main/mcp-server/docs"
Repository = "https://github.com/Mbaroudi/arclang"
Issues = "https://github.com/Mbaroudi/arclang/issues"

[project.scripts]
arclang-mcp = "arclang_mcp.server:main"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
