[package]
name = "arclang-wasm"
version = "3.0.0"
edition = "2021"
license = "MIT"
description = "ArcLang compiler core compiled to WebAssembly for the browser playground"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

# wasm-pack's bundled wasm-opt is too old for current rustc output; we run
# a recent binaryen wasm-opt manually in the build script instead.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
arclang = { path = "..", default-features = false }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
